# skilldip

./: .gitmodules  CMakeLists.txt  README.md  config.json  main.cpp  requests.json  tests.cpp  version.h.in
tests/: test_main.cpp
tests/file/: Biggers2.txt  Turpin.txt  config.json  config1.json  config2.json  config4.json  ff.txt  odu.txt  requests.json  requests2.json  requests3.json  requests4.json  test2.txt  test3.txt
txtfile/: Biggers2.txt  Dzhordan2.txt
